# screenshot-rs

./: .gitignore  Cargo.toml  README.md
examples/: fps.rs  screen.rs
src/: lib.rs
