[package]

name = "screenshot"
version = "0.0.7"
authors = ["Alex <alexchandel@gmail.com>"]
description = "Get a bitmap image of any display."
keywords = ["graphics", "image", "gui", "scripting"]
repository = "https://github.com/alexchandel/screenshot-rs"
readme = "README.md"
license = "CC0-1.0"

[target.x86_64-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"
[target.i686-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"

[dependencies]
libc = "*"

[dev-dependencies]
bmp = "*"
image = "*"
